...
                    indicatorType: Indicator.ballPulseSync,
                    colors: [CustomColors.primary],
                  ),
                ),
                const SizedBox(height: 8),
                Text(
                  "Loading...",
                  key: const Key("loadingText"),
                  style: TextStyles.poppinsMedium14.copyWith(
                    color: CustomColors.secondary
                  ),
                )
              ],
...
                                        width: size
                                      ),
                                      Row(
                                        children: [
                                          Expanded(
                                            child: Container(
                                              key: const Key("responseDialog"),
                                              clipBehavior: Clip.antiAlias,
                                              padding: const EdgeInsets.only(left: 16, right: 16, bottom: 32),
                                              decoration: const BoxDecoration(
                                                color: Colors.white,
                                                borderRadius: BorderRadius.all(Radius.circular(12))
                                              ),
...
                                                        ),
                                                        const SizedBox(height: 32),
                                                        Row(
                                                          children: [
                                                            Expanded(
                                                              child: ElevatedButton(
                                                                key: const Key("dismissButton"),
                                                                onPressed: () {
                                                                  Navigator.of(context, rootNavigator: true).pop();
                                                                },
                                                                style: ElevatedButton.styleFrom(
                                                                  elevation: 0,
                                                                  minimumSize: Size.zero,
...
