...
                              ),
                              const SizedBox(height: 64),
                              Row(
                                children: [
                                  Expanded(
                                    child: ElevatedButton(
                                      key: const Key("getStartedButton"),
                                      onPressed: () async {
                                        context.read<WalkthroughBloc>().add(const WalkthroughSetSkip(isSkip: true));
                                      }, 
                                      style: ElevatedButton.styleFrom(
                                        primary: Theme.of(context).colorScheme.background,
                                        padding: const EdgeInsets.all(16),
...
